2011-12-31 Sat  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-lint-extra-buffer-run-other-main):
	Rewrite.
	(epackage-lint-extra-buffer-run-other-autoload): New.
	(epackage-devel-information-description-short): Check -*- stanzas.
	(epackage-devel-information-date-lm): Add Last-Modified.
	(epackage-devel-information-license-gpl-standard): Improve regexps.
	(epackage-devel-information-maintainer-copyright-1): Improve regexp.
	(epackage-devel-information-maintainer-copyright): New.

2011-12-30 Fri  Jari Aalto  <jari.aalto@cante.net>

	* Makefile: (clean): Adjust help string

	* epackage.el (epackage--info-mode-email-ping-subject):
	Adjust string.
	(epackage-combine-files): Change ERROR to WARN message.
	(epackage-devel-information-license-gpl-standard): Improve
	matching license text accross lines.
	(epackage-devel-information-maintainer-copyright): new.
	(epackage-point-min): New.

2011-12-29 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el
	(top level): checkdoc.el, elint.el, byte compile checked.
	(epackage-devel-information-description-short): New.
	(epackage-devel-information-buffer): Add element DESCRIPTION.
	(epackage-field-set): Add error checking.
	(epackage-devel-compose-package-info): Insert first line
	description.
	(epackage-devel-information-version-from-header): New.
	(epackage-devel-information-version-main): Call
	`epackage-devel-information-version-from-header'.
	(epackage-devel-information-date-lm): Add "Created" search.
	(epackage-devel-information-homepage): Add "URL(en)" search.
	(epackage-devel-information-license-mit): New.
	(epackage-with-lint-buffer-main): New.
	(epackage-lint-extra-file): New.
	(epackage-lint-extra-buffer): New.
	(epackage-lint-extra-delimiter-string): New.
	(epackage-lint-extra-buffer-run-lm): New.
	(epackage-with-checkdoc-buffer): New.
	(epackage-lint-extra-buffer-run-checkdoc): New.
	(epackage-lint-extra-buffer-run-other): New.
	(epackage-buffer-remove-empty-lines): New.